# space-invaders

./: Cargo.toml  Dockerfile  README.md
src/: alien.rs  assets.rs  draw.rs  game.rs  main.rs  position.rs  shot.rs  sprites.rs  wave.rs
src/game/: bullet.rs  canon.rs  collision.rs  entity.rs  explosion.rs  explosions.rs  mod.rs  player_info.rs  position.rs  size.rs  spaceship.rs
src/game/bunker/: block.rs  mod.rs
src/game/bunkers/: block.rs  mod.rs
src/game/entity/: mod.rs
src/game/entity/active/: bullet.rs  canon.rs  mod.rs
src/game/entity/active/wave/: alien.rs  column.rs  mod.rs  red_alien.rs
src/game/entity/statical/: mod.rs
src/game/entity/statical/bunker/: mod.rs
src/game/wave/: alien.rs  mod.rs  red_alien.rs
