[package]

name = "space-invaders"
version = "0.1.0"
authors = [
    "Leonardo Nahra <leonardonahra@gmail.com>",
    "Arthur Adolfo <arthur_adolfo@hotmail.com>"
]

[dependencies]

piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.46.0"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.79.0"
find_folder = "0.3.0"
rand = "0.4.2"
